# longform-evaluation-model-editing

./: .gitignore  LICENSE  README.md  compute_automatic_metrics.py  generate_edit_output.py  llm_annotator.py  llm_survey_eval.py  pyproject.toml  train_annotator_model.py  train_rater_model.py
results/: annotations_dataset.csv
src/: automatic_metrics.py  construct_samples.py  create_edit.py  deberta_annotator.py  human_exemplars.py  llm_annotator.py  llm_survey.py  produce_coupled_entities.py  prompts.py  utils.py
